--- a/index.html
+++ b/index.html
@@ -61,12 +61,15 @@
             this.setState({array: this.state.array});
         },
 
+        run: function () {
+            ReactDOM.render(
+                    (<Preview>{this.state.array.textArray}{this.state.array.dateArray}</Preview>), document.body);
+        },
 
         render: function () {
             return <div className='container'>
                 <div id="id1" className='col-md-2 col-md-offset-5'>
-                    <button type="button" className="btn btn-lg btn-primary"
-                    >预览
+                    <button type="button" className="btn btn-lg btn-primary" onClick={this.run}>预览
                     </button>
                 </div>
                 <div id="right" className="col-md-3 col-md-offset-9">
@@ -90,8 +93,33 @@
                 <div id="left2">{this.state.array.dateArray}</div>
             </div>
         }
+
+
     });
-    ReactDOM.render(<App />, document.getElementById("app"));
+
+    const Preview = React.createClass({
+        run: function () {
+            ReactDOM.render(<App/>, document.body)
+
+        },
+        render: function () {
+            console.log(this.props.children[1]);
+            return (
+                    <div>
+                        <button type="button" onClick={this.run}>编辑</button>
+                        <div>
+                            {this.props.children[0]}
+                            {this.props.children[1]}
+                        </div>
+                        <button type="button">提交</button>
+                    </div>)
+        }
+    });
+
+    ReactDOM.render(
+            <App />
+            , document.getElementById("app"));
+
 </script>
 
 </body>
